me/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: me
  namespace: me
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: me
  replicas: 3
  template:
    metadata:
      labels:
        app: me
    spec:
      containers:
      - name: me
        image: ghcr.io/aksharpatel47/me:main-18
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            port: 3000
            path: /
          initialDelaySeconds: 120
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 3000
            path: /
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 6
