me/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: me
  namespace: me
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: me
